FreeSynd 0.7.5 : Release Notes
----------------------------

Description
-----------
This is a prelimary release for testing and development purposes.

Changes
-------
  *

Fixed Bugs
----------
  *

Features added
----------
  *

Known issues with this release
------------------------------
  * Agent AI is partially operational.
  * PathFinding requires improvement (path smoothing)
  * No animation for animated windows
  * Map drawing is buggy
  * Not all weapons correctly function.

History
-------

 v0.7.1
 ----
  * Code refactoring
  * All tabs coverted to spaces
  * Better animation for impact or detonating explosions
  * Clicking on map/minimap
  * Enemy agents on some maps were without weapons
  * Circle in minimap is more precise and is fully drawn
  * Agent with chest mod ver > 1 will explode when killed (Ctrl + D)
  * Time bomb can be detonated by shot

 v0.7
 ----
  * Vehicle creates explosion and damages everything nearby
  * Added sound effects for gauss, timebomb, mission failed
  * Police officer will warn armed pedestrian and shoot after 5 sec
  * Rewritten Z coord setup and use, due to removal of Z lowering in pedmanager
  * Rewritten PedInstance::animate
  * Better animation switching for pedestrians
  * 3517737 : Incorrect handling of agent switching, with selected weapon
  * Pathfinding out of memory/segfault error
  * Modifier keys where not passed to the key event
  * Next and previous button in the briefing where not updated correctly
  * Access card will identify agent as police officer, also opens large doors
  * Selection markers (1,2,3,4), to identify selected agent
  * Sound effects added "Selected", "Mission failed", "Police warning"
  * Gameplay minimap fully implemented

 v0.6
 ----
  * CMake is used instead of autotools, used to generate Makefile for Unix's
  and project files for MSVC++
  * Reload button functional(mentor66)
  * Weapons: flamethrower, laser, gauss, minigun, uzi, shotgun, time bomb,
 persuadetron (animation only)